force-app/main/default/objects/Product2/fields/SBQQ__DefaultQuantity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DefaultQuantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Specifies the starting quantity of the product when added.</description>
    <inlineHelpText>Indicates the default quantity for the product at the time of quoting</inlineHelpText>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>