force-app/main/default/objects/Product2/recordTypes/Pre_Pipeline_Products.recordType-meta.xml
<RecordType>
    <fullName>Pre_Pipeline_Products</fullName>
    <active>true</active>
    <description>Used in the pre-pipeline estimator</description>
    <label>Pre-Pipeline Products</label>
</RecordType>