force-app/main/default/objects/Product2/recordTypes/Standard_Product.recordType-meta.xml
<RecordType>
    <fullName>Standard_Product</fullName>
    <active>true</active>
    <label>Standard Product</label>
</RecordType>