force-app/main/default/objects/Product2/validationRules/CWS_3rd_Party_Product_renewal_uplift.validationRule-meta.xml
<ValidationRule>
    <fullName>CWS_3rd_Party_Product_renewal_uplift</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(CWS_SKU_Type__c, &apos;Third Party&apos;), NOT(OR(ISBLANK(CWS_Renewal_Uplift__c),CWS_Renewal_Uplift__c==0)))</errorConditionFormula>
    <errorMessage>The 3rd party products should have renewal uplift%  as either 0 or blank.</errorMessage>
</ValidationRule>