force-app/main/default/objects/Product2/validationRules/Prevent_Code_edit_once_sent_for_Downstrm.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Code_edit_once_sent_for_Downstrm</fullName>
    <active>true</active>
    <description>Product Admin, can edit Product Code at the time of new product creation (through UI or through data loader) but after the product has been sent downstream by Boomi process, he will not be allowed to change the Product code.</description>
    <errorConditionFormula>AND(OR(CONTAINS(TEXT(CWS_Zuora_Product_Sync_Status__c), &quot;Synced&quot;) ,CONTAINS(TEXT(CWS_NetSuite_Product_Sync_Status__c), &quot;Synced&quot;)), ISCHANGED(CWS_ProductCode__c))</errorConditionFormula>
    <errorMessage>The product Code cannot be modified as it has already been sent downstream to Zuora and NetSuite</errorMessage>
</ValidationRule>