force-app/main/default/objects/Product2/validationRules/Prevent_Subcategory_edit_snt_to_Dwnstrm.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Subcategory_edit_snt_to_Dwnstrm</fullName>
    <active>true</active>
    <description>Product Admin, can edit Sub Category at the time of new product creation (through UI or through data loader) but after the product has been sent downstream by Boomi process, he will not be allowed to change the Sub Category.</description>
    <errorConditionFormula>AND(OR(CONTAINS(TEXT(CWS_Zuora_Product_Sync_Status__c), &quot;Synced&quot;) ,CONTAINS(TEXT(CWS_NetSuite_Product_Sync_Status__c), &quot;Synced&quot;)), ISCHANGED(CWS_Sub_Category__c))</errorConditionFormula>
    <errorDisplayField>CWS_Sub_Category__c</errorDisplayField>
    <errorMessage>Sub-category cannot be modified as it has already been sent downstream to Zuora and NetSuite</errorMessage>
</ValidationRule>