force-app/main/default/objects/Product2/listViews/Active_Perch_SKUs.listView-meta.xml
<ListView>
    <fullName>Active_Perch_SKUs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CWS_Description__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CWS_Billing_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CWS_Category__c</field>
        <operation>equals</operation>
        <value>Perch</value>
    </filters>
    <label>Active Perch SKUs</label>
</ListView>