force-app/main/default/objects/Product2/listViews/BC_VIEW_FOR_1_TIME.listView-meta.xml
<ListView>
    <fullName>BC_VIEW_FOR_1_TIME</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__BillingType__c</columns>
    <columns>CWS_Billing_Term__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Assist - HD</value>
    </filters>
    <label>BC VIEW FOR 1 TIME</label>
</ListView>