force-app/main/default/objects/Product2/listViews/CWS_Continuum_Products.listView-meta.xml
<ListView>
    <fullName>CWS_Continuum_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CWS_Category__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>CWS_UOM__c</columns>
    <columns>CWS_Charge_Model__c</columns>
    <columns>CWS_Billing_Only__c</columns>
    <columns>CWS_Currencies_Billing_Only__c</columns>
    <columns>CWS_Hide_on_OrderForm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Source__c</field>
        <operation>equals</operation>
        <value>CMS</value>
    </filters>
    <filters>
        <field>CWS_Category__c</field>
        <operation>equals</operation>
        <value>Recover</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CWS_Hide_on_OrderForm__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Continuum Products</label>
</ListView>