force-app/main/default/objects/Product2/listViews/CWS_In_Active_Products.listView-meta.xml
<ListView>
    <fullName>CWS_In_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CWS_Category__c</columns>
    <columns>CWS_Sub_Category__c</columns>
    <columns>CWS_License_Type__c</columns>
    <columns>CWS_ChargeType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In Active Products</label>
</ListView>