force-app/main/default/objects/Product2/listViews/CWS_Product.listView-meta.xml
<ListView>
    <fullName>CWS_Product</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CWS_ChargeType__c</columns>
    <columns>CWS_Category__c</columns>
    <columns>CWS_Sub_Category__c</columns>
    <columns>CWS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product</label>
</ListView>