force-app/main/default/objects/Product2/listViews/CWS_Usage_Products.listView-meta.xml
<ListView>
    <fullName>CWS_Usage_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>CWS_Category__c</columns>
    <columns>CWS_Sub_Category__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>CWS_License_Type__c</columns>
    <columns>CWS_ChargeType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_ChargeType__c</field>
        <operation>equals</operation>
        <value>Usage</value>
    </filters>
    <label>Usage Products</label>
    <language>en_US</language>
</ListView>