force-app/main/default/objects/Product2/listViews/Future_State_Min_Commit_TRUE.listView-meta.xml
<ListView>
    <fullName>Future_State_Min_Commit_TRUE</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>CWS_ChargeType__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>CWS_Bundle_Type__c</columns>
    <columns>CWS_SKU_Type__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>CWS_Currencies_Billing_Only__c</columns>
    <columns>CWS_Minimum_Commit_Eligibility__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CWS_Minimum_Commit_Eligibility__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Future State Min Commit = TRUE</label>
</ListView>